(update) remove firebase config creds

--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,11 @@
     <script>
       // Initialize Firebase
       var config = {
-        apiKey: "AIzaSyBoUPlAe5Jbz_lc20sluF8IW8GQyvj2vjM",
-        authDomain: "project--3096610514914531623.firebaseapp.com",
-        databaseURL: "https://project--3096610514914531623.firebaseio.com",
-        storageBucket: "project--3096610514914531623.appspot.com",
-        messagingSenderId: "640777191644"
+        apiKey: "",
+        authDomain: "",
+        databaseURL: "",
+        storageBucket: "",
+        messagingSenderId: ""
       };
       var app = firebase.initializeApp(config);
     </script>
