--- a/public/index.html
+++ b/public/index.html
@@ -4,18 +4,17 @@
   <head>
     <meta charset="utf-8" />
     <title>AngularJS With Google Maps</title>
-    <link data-require="bootstrap-css@3.2.0" data-semver="3.2.0" rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" />
     <script>document.write('<base href="' + document.location + '" />');</script>
     <link rel="stylesheet" href="style.css" />
     <script src="https://www.gstatic.com/firebasejs/3.7.2/firebase.js"></script>
     <script>
       // Initialize Firebase
       var config = {
-        apiKey: "",
-        authDomain: "",
-        databaseURL: "",
-        storageBucket: "",
-        messagingSenderId: ""
+        apiKey: "AIzaSyBoUPlAe5Jbz_lc20sluF8IW8GQyvj2vjM",
+        authDomain: "project--3096610514914531623.firebaseapp.com",
+        databaseURL: "https://project--3096610514914531623.firebaseio.com",
+        storageBucket: "project--3096610514914531623.appspot.com",
+        messagingSenderId: "640777191644"
       };
       var app = firebase.initializeApp(config);
     </script>
@@ -43,7 +42,7 @@
         queryParameterForSignInSuccessUrl: 'signInSuccessUrl',
         // Will use popup for IDP Providers sign-in flow instead of the default, redirect.
         signInFlow: 'popup',
-        signInSuccessUrl: 'localhost:3000',
+        signInSuccessUrl: 'car-go-togakangaroo.c9users.io',
         signInOptions: [
           // Leave the lines as is for the providers you want to offer your users.
           firebase.auth.GoogleAuthProvider.PROVIDER_ID,
@@ -64,47 +63,44 @@
       ui.start('#firebaseui-auth-container', uiConfig);
     </script>
     <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/1.0.0/firebaseui.css" />
-    <script data-require="google-maps@1.0.0" data-semver="1.0.0" src="http://maps.google.com/maps/api/js?sensor=false"></script>
     <script data-require="angular.js@1.2.x" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.min.js" data-semver="1.2.17"></script>
     <script data-require="lodash-underscore@*" data-semver="2.4.1" src="https://rawgit.com/lodash/lodash/2.4.1/dist/lodash.underscore.min.js"></script>
-    <script data-require="angular-google-maps@*" data-semver="1.1.4" src="https://rawgit.com/nlaplante/angular-google-maps/1.1.4/dist/angular-google-maps.min.js"></script>
     <script src="app.js"></script>
   </head>
   <body>
 
-    <div ng-controller="MainCtrl">
+    <main ng-controller="MainCtrl">
       <div ng-hide="isLoggedIn">
         <div id="firebaseui-auth-container"></div>
         <div id="loader">Loading...</div>
       </div>
       <div class="panel panel-default">
-        <div class="panel-body">
-          <google-map control="map.control" center="map.center" zoom="map.zoom">
-            <marker coords="marker.center"></marker>
-          </google-map>
-          <form class="form-horizontal" role="form" ng-show="isLoggedIn">
-            <div class="form-group">
-              <label for="origin" class="col-sm-2 control-label">Origin</label>
-              <div class="col-sm-8">
-                <input type="text" id="origin" class="form-control" ng-model="directions.origin" />
-              </div>
-            </div>
-            <div class="form-group">
-              <label for="destination" class="col-sm-2 control-label">Destination</label>
-              <div class="col-sm-8">
-                <input type="text" id="destination" class="form-control" ng-model="directions.destination" />
-              </div>
-            </div>
-            <div class="form-group">
-              <div class="col-sm-offset-2 col-sm-8">
-                <button class="btn btn-primary" ng-click="getDirections()">Get Directions</button>
-              </div>
-            </div>
-          </form>
-
-          <div id="directionsList" ng-show="directions.showList" class="panel panel-primary"></div>
-        </div>
+        <article id="dashboard">
+          <ul class="car-cards">
+            <li>
+              <section>
+                <header>
+                  <h1>Honda Civic</h1>
+                  <dl>
+                    <dt>Oil Change</dt>
+                    <dd>
+                      <svg viewBox="0 0 100 1" style="border: 1px solid black">
+                        <rect x="0" y="0" height="1" width="60" fill="#AA1111"></rect>
+                      </svg>
+                    </dd>
+                    <dt>Tire Rotation</dt>
+                    <dd>
+                      <svg viewBox="0 0 100 1" style="border: 1px solid black">
+                        <rect x="0" y="0" height="1" width="80" fill="#AA1111"></rect>
+                      </svg>
+                    </dd>
+                  </dl>
+                </header>
+              </section>
+            </li>
+          </ul>
+        </article>
       </div>
-    </div>
+    </main>
   </body>
 </html>
