saving to firebase

--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
   </head>
   <body>
      <nav>
-       <h1>Car.go <small>Your total car maintenance tracking app :)</small></h1>
+       <h1>Car.go <small>Your total car maintenance tracking app :)</small><img src="logo.png" style="width:250px;height:100px;"></h1>
      </nav>
     <main ng-controller="MainCtrl as $ctrl">
       <div ng-hide="isLoggedIn">
