--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   <body ng-cloak>
      <nav>
        <img src="logo.png">
-       <h1>Car.go <small>Your total car maintenance tracking app :)</small></h1>
+       <h1>Car.go <small>Your total car maintenance tracking app ;)</small></h1>
      </nav>
     <main ng-controller="MainCtrl as $ctrl">
       <div ng-if="$ctrl.isLoginUiLoading">
