--- a/public/index.html
+++ b/public/index.html
@@ -175,6 +175,7 @@
                   </div>
                 </dl>
                 <div class="actions">
+                  <a class="small" ng-click="$ctrl.deleteCar(car)">Delete</a>
                   <a ng-click="$ctrl.beginCheckIn(car)">Check In</a>
                   <a ng-click="$ctrl.beginAddingTrackingItem(car)">Add Tracking Item</a>
                 </div>
